--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Measure the first-time load speed for dev.mensio.com. Used to measure the impact of bundling policy on performance.",
   "main": "index.js",
   "scripts": {
+    "headless-chrome": "/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome --remote-debugging-port=9222 --headless",
+    "benchmarker": "node runBenchmarker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +26,9 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "chrome-har-capturer": "^0.13.5"
   }
 }
