--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Measure the first-time load speed for dev.mensio.com. Used to measure the impact of bundling policy on performance.",
   "main": "index.js",
   "scripts": {
-    "headless-chrome": "/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome --remote-debugging-port=9222 --headless",
-    "benchmarker": "node runBenchmarker.js",
+    "headless-chrome": "node scripts/launch-headless-chrome.js",
+    "benchmarker": "node src/runBenchmarker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "chrome-har-capturer": "^0.13.5"
+    "chrome-har-capturer": "^0.13.5",
+    "chrome-launcher": "^0.11.2"
   }
 }
