--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Measure the first-time load speed for dev.mensio.com. Used to measure the impact of bundling policy on performance.",
   "main": "index.js",
   "scripts": {
-    "headless-chrome": "node scripts/launch-headless-chrome.js",
-    "benchmarker": "node src/runBenchmarker.js",
+    "benchmark": "node src/runBenchmark.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +28,11 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "chart.js": "^2.8.0",
+    "chartjs-node-canvas": "^2.4.0",
     "chrome-har-capturer": "^0.13.5",
-    "chrome-launcher": "^0.11.2"
+    "chrome-launcher": "^0.11.2",
+    "jsreport": "^2.5.0",
+    "yargs": "^13.3.0"
   }
 }
