try jsreport-core instead of jsreport. Add std deviation to results.
also add pretty cli spinner :heart_eyes:

--- a/jsreport/data/har-report/har-report-sample-data/config.json
+++ b/jsreport/data/har-report/har-report-sample-data/config.json
@@ -3,10 +3,10 @@
         "shortid": "rR_yZ3f"
     },
     "shortid": "Sylu2J1ZXH",
-    "name": "har-report-data",
+    "name": "har-report-sample-data",
     "creationDate": "2019-08-01T21:54:57.692Z",
     "modificationDate": {
-        "$$date": 1564697925777
+        "$$date": 1564706116514
     },
     "_id": "gYVUy64TRZ8641il",
     "$entitySet": "data"
