--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "chrome-har-capturer": "^0.13.5",
     "chrome-launcher": "^0.11.2",
     "jsreport": "^2.5.0",
+    "jsreport-chrome-pdf": "^1.5.0",
+    "jsreport-core": "^2.5.0",
+    "jsreport-handlebars": "^2.0.2",
+    "ora": "^3.4.0",
+    "puppeteer": "^1.19.0",
     "yargs": "^13.3.0"
   }
 }
