--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Measure the first-time load speed for dev.mensio.com. Used to measure the impact of bundling policy on performance.",
   "main": "index.js",
+  "bin": {
+    "benchmark": "./src/runBenchmark.js"
+  },
   "scripts": {
     "benchmark": "node src/runBenchmark.js",
     "test": "echo \"Error: no test specified\" && exit 1"
