--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "initial-load-benchmarker",
   "version": "1.0.0",
   "description": "A CLI to measure first-time load speed and related metrics for any website.",
-  "main": "index.js",
+  "main": "./src/runBenchmark.js",
   "bin": {
     "benchmark": "./src/runBenchmark.js"
   },
@@ -32,10 +32,9 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "chart.js": "^2.8.0",
-    "chartjs-node-canvas": "^2.4.0",
     "chrome-har-capturer": "^0.13.5",
     "chrome-launcher": "^0.11.2",
+    "d3-node": "^2.2.0",
     "jsreport": "^2.5.0",
     "jsreport-chrome-pdf": "^1.5.0",
     "jsreport-core": "^2.5.0",
